# FMODetect-v2

./: .gitignore  CLAUDE.md  DEPLOY.md  EXPERIMENTS.md  NOVELTY.md  README.md  pyproject.toml
api/: main.py
api/_examples/: manifest.json
configs/: default.yaml  smoke.yaml  vast.yaml  vast_rerun.yaml  vast_warmstart.yaml
notebooks/: COLAB.md  VAST.md  train_colab.ipynb  train_vast.ipynb
scripts/: download_datasets.sh  download_eval_all.sh  download_vot2016_only.py  eval.py  eval_falling_visual.py  fetch_vot_annotations.py  infer.py  setup_vast.sh  status.sh  train.py  vast.sh  vastrc.template  verify_annotations.py
space/: Dockerfile  README.md  requirements.txt
src/fmodetect/data/: build_dataset.py  dataset.py  patterns.py  synthesize.py
src/fmodetect/eval/: datasets.py  metrics.py
src/fmodetect/inference/: runner.py  trajectory.py
src/fmodetect/models/: attention.py  losses.py  unet.py
src/fmodetect/training/: loop.py
src/fmodetect/utils/: config.py
tests/: test_model.py  test_synthesize.py  test_trajectory.py
ui/: README.md  next.config.mjs  package-lock.json  package.json
ui/app/: globals.css  layout.tsx  page.tsx
