[project]
name = "fmodetect-v2"
version = "0.1.0"
description = "FMODetect-v2: Modernized PyTorch port of FMODetect with CBAM attention, joint TDF+matting multi-task head, and uncertainty-weighted boundary loss."
requires-python = ">=3.14"
readme = "README.md"

dependencies = [
    # Core ML
    "torch==2.12.0+cu126",
    "torchvision==0.27.0+cu126",
    "numpy>=2.1",
    "scipy>=1.14",
    "scikit-image>=0.25",
    "opencv-python-headless>=4.10",
    "imageio[ffmpeg]>=2.36",
    "pillow>=11",
    "h5py>=3.12",
    "tqdm>=4.66",
    # Experiment tracking
    "mlflow>=3.5",
    "clearml>=1.16",
    "tensorboard>=2.18",
    # Config + CLI
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "typer>=0.13",
    "rich>=13.9",
    # API backend
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.20",
    "websockets>=14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
]

[tool.uv]
# Pin torch to PyTorch's CUDA wheel index
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fmodetect"]

[tool.ruff]
line-length = 110
target-version = "py314"
